--- a/_posts/2014-12-16-top-three2.md
+++ b/_posts/2014-12-16-top-three2.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Three Things That Happened Last Week: December 15, 2014
+title: The First Three
 categories: [three things]
 tags: [lists, what i'm into, weekly wrap-up]
-description: A rundown of the week that went
+description: Introduction to the weekly wrap-up
 fullview: true
 ---
 
