--- a/_posts/2014-12-15-top-three.md
+++ b/_posts/2014-12-15-top-three.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Three Things That Happened Last Week: December 15, 2014
+title: Three Things That Happened Last Week - December 15, 2014
 categories: [three things]
 tags: [lists, weekly wrap-up, movies, comedy]
 description: A rundown of the week that went
