--- a/_posts/2014-12-15-top-three.md
+++ b/_posts/2014-12-15-top-three.md
@@ -5,6 +5,7 @@ categories: [three things]
 tags: [lists, weekly wrap-up, movies, comedy]
 description: A rundown of the week that went
 fullview: true
+comments: true
 ---
  
 
