--- a/_posts/2014-12-15-top-three.md
+++ b/_posts/2014-12-15-top-three.md
@@ -6,6 +6,7 @@ tags: [lists, weekly wrap-up, movies, comedy]
 description: A rundown of the week that went
 fullview: true
 comments: true
+excerpt: The three most memorable events.
 ---
  
 
