--- a/_posts/2014-12-17-hiphop.md
+++ b/_posts/2014-12-17-hiphop.md
@@ -6,6 +6,7 @@ tags: [music, spotify, instagram, data science]
 description: What about all the techno rap I listen to?
 fullview: true
 date: 2014-12-17 14:40:45
+excerpt: What happened to all the techno rap I listen to?
 image:
   feature: sample-image-2.jpg
   credit: Reddit
