--- a/_posts/2015-03-02-top-three.md
+++ b/_posts/2015-03-02-top-three.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Three Things That Happened <s>Last Week</s> Recently
+title: Three Things That Happened Before 3/2/2015
 categories: [three things]
 tags: [lists, weekly wrap-up]
 description: A rundown of the week that went
