--- a/_posts/2015-03-02-top-three.md
+++ b/_posts/2015-03-02-top-three.md
@@ -15,7 +15,7 @@ Trying to keep pace with my one book a month (and alternating between fiction an
 ### NBA Player Data
 I've started working on an R Shiny app exploring the NBA.com/stats player shot log API. The API requires unique playerIDs, which I couldn't find anywhere, so I wrote a scraper to build a table. I outlined that [here](http://www.andywon.nyc/nba-player-IDs).
 
-### Basketball
-Nets vs. Warriors: A high-scoring affair, with clutch Steph Curry 3s, a game-winning Jarret Jack jumper with 1.1 seconds left, and a Nets win. I love this game!
+### Live Basketball
+Nets vs. Warriors: In a mostly forgettable season (for the Nets), this was a fun game to be at. A high-scoring affair, with clutch Steph Curry 3s, a game-winning Jarret Jack jumper with 1.1 seconds left, and a Nets win. I love this game!
 
 <iframe src="https://vine.co/v/O0ePbO3AFzi/embed/simple" width="480" height="480" frameborder="0"></iframe><script src="https://platform.vine.co/static/scripts/embed.js"></script>
