blog category update

--- a/_posts/2014-12-17-hiphop.md
+++ b/_posts/2014-12-17-hiphop.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: My Year in Music (via Spotify)
-categories: [photos]
-tags: [music, spotify, instagram, data science]
+categories: [music]
+tags: [a, music, spotify, instagram, data science]
 description: What about all the techno rap I listen to?
 fullview: true
 date: 2014-12-17 14:40:45
